--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
         maven {
             url "https://maven.google.com"
-        }
+            }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
@@ -20,6 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
+
     }
 }
 
